--- a/environment.yml
+++ b/environment.yml
@@ -25,8 +25,12 @@ dependencies:
     - kiwisolver==1.1.0
     - matplotlib==3.1.0
     - numpy==1.16.4
+    - pandas==0.24.2
+    - pillow==6.0.0
     - pyparsing==2.4.0
     - python-dateutil==2.8.0
+    - pytz==2019.1
+    - scipy==1.3.0
     - six==1.12.0
     - torch==1.1.0
 prefix: /Users/moritzalthaus/anaconda/envs/forever_young
