--- a/environment.yml
+++ b/environment.yml
@@ -33,5 +33,7 @@ dependencies:
     - scipy==1.3.0
     - six==1.12.0
     - torch==1.1.0
+    - torchvision==0.3.0
+    - tqdm==4.32.2
 prefix: /Users/moritzalthaus/anaconda/envs/forever_young
 
